--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,24 +1,24 @@
 security:
-    encoders:
-        Symfony\Component\Security\Core\User\User: plaintext
-
-    role_hierarchy:
-        ROLE_ADMIN:       ROLE_USER
-        ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
-
     providers:
         in_memory:
             memory:
                 users:
-                    admin: { password: adminadmin, roles: [ 'ROLE_ADMIN' ] }
+                    admin: { password: adminpass, roles: 'ROLE_ADMIN' }
 
     firewalls:
-        dev:
-            pattern:  ^/(_(profiler|wdt)|css|images|js)/
-            security: false
-
-        login:
-            security: false
-
         secured_area:
+            pattern: ^/admin
             anonymous: ~
+            form_login:
+                login_path:  modu_admin_login
+                check_path:  modu_admin_login_check
+            logout:
+                path: /admin/logout
+                target: /
+
+    access_control:
+        - { path: ^/admin/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/admin, roles: ROLE_ADMIN }
+
+    encoders:
+        Symfony\Component\Security\Core\User\User: plaintext
