--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -10,8 +10,8 @@ security:
             pattern: ^/admin
             anonymous: ~
             form_login:
-                login_path:  modu_admin_login
-                check_path:  modu_admin_login_check
+                login_path:  anh_admin_login
+                check_path:  anh_admin_login_check
             logout:
                 path: /admin/logout
                 target: /
