--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,3 @@
-modu_site:
-    resource: "@ModuSiteBundle/Resources/config/routing.yml"
+anh_site:
+    resource: "@AnhSiteBundle/Resources/config/routing.yml"
     prefix:   /
