--- a/src/Anh/SiteBundle/Resources/config/services.yml
+++ b/src/Anh/SiteBundle/Resources/config/services.yml
@@ -3,7 +3,7 @@ parameters:
 
 services:
     anh_site.date_format_listener:
-        class: Anh\Bundle\SiteBundle\EventListener\DateFormatListener
+        class: Anh\SiteBundle\EventListener\DateFormatListener
         arguments: [ @service_container ]
         tags:
             - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest }
