Refactored to inject just needed dependencies instead of whole container

--- a/src/Anh/SiteBundle/Resources/config/services.yml
+++ b/src/Anh/SiteBundle/Resources/config/services.yml
@@ -4,6 +4,8 @@ parameters:
 services:
     anh_site.date_format_listener:
         class: Anh\SiteBundle\EventListener\DateFormatListener
-        arguments: [ @service_container ]
+        arguments:
+            - @twig
+            - %anh_site.date_format%
         tags:
             - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest }
