Set security firewall to cover all urls

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -7,7 +7,7 @@ security:
 
     firewalls:
         secured_area:
-            pattern: ^/admin
+            # pattern: ^/admin
             anonymous: ~
             form_login:
                 login_path:  anh_admin_login
