--- a/src/Anh/SiteBundle/Resources/config/bower/bower.json
+++ b/src/Anh/SiteBundle/Resources/config/bower/bower.json
@@ -2,7 +2,8 @@
     "name": "AnhSiteBundle",
     "private": true,
     "dependencies": {
-        "jquery": "~2.0.3",
-        "jqueryui": "~1.10.3"
+        "jquery": "~2.1.1",
+        "jqueryui": "~1.10.4",
+        "foundation": "~5.2.2"
     }
 }
