--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,20 @@
 /web/bundles/
-/app/config/parameters.yml
 /app/bootstrap.php.cache
 /app/cache/*
+/app/config/parameters.yml
 /app/logs/*
 !app/cache/.gitkeep
 !app/logs/.gitkeep
+/app/phpunit.xml
 /build/
 /vendor/
 /bin/
-/composer.lock
+/composer.phar
+
+/web/assetic/
+/web/css/
+/web/js/
+/app/SymfonyRequirements.php
+/app/check.php
+/app/SymfonyStandard/
+/src/Anh/SiteBundle/Resources/public/components/
