--- a/src/Anh/SiteBundle/Resources/config/bower/bower.json
+++ b/src/Anh/SiteBundle/Resources/config/bower/bower.json
@@ -4,6 +4,7 @@
     "dependencies": {
         "jquery": "~2.1.1",
         "jqueryui": "~1.11.0",
+        "font-awesome": "~4.2.0",
         "foundation": "~5.3.1"
     }
 }
